Get conda build working. Add docstrings

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ recursive-include . *.html
 recursive-include . *.csv
 recursive-include . *.yml
 
-include versioneer.py
-include _version.py
+include ./versioneer.py
+include ./_version.py
