--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ install:
   source $HOME/miniconda3/bin/activate root
   conda install -y conda-build anaconda-client
 script:
-- conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_INSTALL/intake" ./conda
-- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_TOKEN}
+- conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" ./conda
+- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
   upload `conda build -c intake/label/main --output ./conda`; fi
 notifications:
   email: false
