--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_script:
     echo "Stopping Travis-CI's PostgreSQL service."
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
         sudo service postgresql stop
-    else
-        sudo brew services stop postgresql
+    # else
+    #     sudo brew services stop postgresql
     fi
 install:
 - |
