--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
       conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" --no-test ./conda
   fi
 - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
-  upload --force `conda build -c intake/label/main --output ./conda`; fi
+  upload --channel intake --force `conda build -c intake/label/main --output ./conda`; fi
 notifications:
   email: false
   on_success: change
