--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ install:
   conda install -y conda-build anaconda-client
 script:
 - |
+  conda install -y flake8
+  flake8 .
   if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" ./conda
   else
@@ -42,7 +44,7 @@ script:
       conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" --no-test ./conda
   fi
 - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
-  upload --channel intake --force `conda build -c intake/label/main --output ./conda`; fi
+  upload -u intake --force `conda build -c intake/label/main --output ./conda`; fi
 notifications:
   email: false
   on_success: change
