--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   echo "Installing dependencies."
   conda install -y conda-build anaconda-client flake8
   git clone https://github.com/ContinuumIO/PostgresAdapter.git
-  conda build PostgresAdapter/buildscripts/condarecipe
+  conda build --python "${CONDA_PY:0:1}:${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
   conda install --use-local postgresadapter
 script:
 - |
