--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   conda install -y conda-build anaconda-client flake8
   git clone https://github.com/ContinuumIO/PostgresAdapter.git
   conda build --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
-  conda install --use-local postgresadapter
+  conda install -y --use-local postgresadapter
 script:
 - |
   flake8 .
