--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,12 @@ install:
   conda install -y conda-build anaconda-client flake8
   flake8 .  # Fail fast on syntax errors
   git clone https://github.com/ContinuumIO/PostgresAdapter.git
-  conda build --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
+  if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      conda build --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
+  else
+      # Workaround for Travis-CI bug #2: https://github.com/travis-ci/travis-ci/issues/7773
+      conda build --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
+  fi
   conda install -y --use-local postgresadapter
 script:
 - |
