--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ install:
   else
       # Workaround for Travis-CI bug #2: https://github.com/travis-ci/travis-ci/issues/7773
       conda build --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
+      # python.app conflicts with postgresadapter's installation
+      conda remove -y python.app
   fi
   conda install -y --use-local postgresadapter
 script:
