--- a/tests/catalog1.yml
+++ b/tests/catalog1.yml
@@ -1,6 +1,7 @@
 plugins:
   source:
     - module: intake_postgres
+    - dir: !template '{{ CATALOG_DIR }}/plugin_dir'
 
 sources:
   # In this case, each "source" is the name of a dataset; for convenience, it
@@ -34,3 +35,98 @@ sources:
                coalesce(a.rank, b.rank) as rank
         from sample2_1 a full outer join sample2_2 b
         on a.name = b.name
+
+  - name: points
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from points
+
+  - name: multipoints
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from multipoints
+
+  - name: lines
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from lines
+
+  - name: multilines
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from multilines
+
+  - name: polygons
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from polygons
+
+  - name: multipolygons
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from multipolygons
+
+  - name: triangles
+    driver: postgres
+    args:
+      uri: 'postgresql://postgres@localhost:5432/postgres'
+      sql_expr: |
+        select * from triangles
+
+  - name: jinja2_shell
+    driver: postgres
+    args:
+      uri: !template 'postgresql://postgres@localhost:{{ shell("echo 5432") }}/{{ shell("echo postgres") }}'
+      sql_expr: |
+        select * from sample1
+
+  - name: jinja2_env
+    driver: postgres
+    args:
+      uri: !template 'postgresql://postgres@localhost:{{ env("DBPORT") }}/{{ env("DBNAME") }}'
+      sql_expr: |
+        select * from sample1
+
+  - name: jinja2_shell_and_env
+    driver: postgres
+    args:
+      uri: !template 'postgresql://postgres@localhost:{{ shell("echo 5432") }}/{{ env("DBNAME") }}'
+      sql_expr: |
+        select * from sample1
+
+  - name: jinja2_params_with_env
+    parameters:
+      port:
+        description: Database port
+        type: int
+        default: 5432
+        allowed: 1024-65535
+      dbname:
+        description: Database name
+        type: str
+        default: postgres
+      username:
+        description: Database username
+        type: str
+        default: postgres
+      address:
+        description: Database server address
+        type: hostname  # IP?
+        default: localhost
+    driver: postgres
+    args:
+      uri: !template 'postgresql://{{ username }}{{ env(DB_PASSWD) }}@{{ address }}:{{ port }}/{{ dbname }}'
+      sql_expr: |
+        select * from sample1
