Add shapely to test dependencies

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -28,6 +28,7 @@ test:
     - psycopg2
     - sqlalchemy
     - postgresql
+    - shapely
   commands:
     - py.test --verbose --cov=intake_postgres tests
 
