--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ os:
   - osx
 services:
   - docker
+branches:
+  only:
+  - master
 env:
   matrix:
   - CONDA_PY=27
@@ -45,8 +48,8 @@ script:
       # Workaround for Travis-CI bug #2: https://github.com/travis-ci/travis-ci/issues/7773
       conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" -c local --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" ./conda
   fi
-- if [ -n "$TRAVIS_TAG" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
-  upload -u intake --force `conda build -c intake/label/main --output ./conda`; fi
+- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
+  upload --force `conda build -c intake/label/main --output ./conda`; fi
 notifications:
   email: false
   on_success: change
