--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,6 +8,7 @@ source:
 build:
   number: {{ GIT_DESCRIBE_NUMBER|int }}
   script: python setup.py install --single-version-externally-managed --record=record.txt
+  noarch: python
 
 requirements:
   build:
