--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ script:
       conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" -c local --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" ./conda
   fi
 - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
-  upload --force `conda build -c intake/label/main --output ./conda`; fi
+  upload --force `conda build -c intake/label/main --output ./conda`; else echo "skipping upload"; fi
 notifications:
   email: false
   on_success: change
