--- a/.travis.yml
+++ b/.travis.yml
@@ -29,23 +29,15 @@ install:
   echo "Installing dependencies."
   conda install -y conda-build anaconda-client flake8
   flake8 .  # Fail fast on syntax errors
-  git clone https://github.com/ContinuumIO/PostgresAdapter.git
-  if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      conda build --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
-  else
-      # Workaround for Travis-CI bug #2: https://github.com/travis-ci/travis-ci/issues/7773
-      conda build --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" PostgresAdapter/buildscripts/condarecipe
-      # python.app conflicts with postgresadapter's installation
-      conda remove -y python.app
-  fi
-  conda install -y --use-local postgresadapter
+  # python.app conflicts with postgresadapter's installation
+  # conda remove -y python.app
 script:
 - |
   if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" -c local --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" ./conda
+      conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" ./conda
   else
       # Workaround for Travis-CI bug #2: https://github.com/travis-ci/travis-ci/issues/7773
-      conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" -c local --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" ./conda
+      conda build -c "https://conda.anaconda.org/t/$ANACONDA_INTAKE_TOKEN/intake" --no-test --python "${CONDA_PY:0:1}.${CONDA_PY:1:2}" ./conda
   fi
 - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then anaconda -t ${ANACONDA_INTAKE_TOKEN}
   upload --force `conda build -c intake/label/main --output ./conda`; else echo "skipping upload"; fi
