--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.6
   - intake
-  - intake-odbc
+  - intake-sql
   - pip:
     - sphinx
     - sphinx-rtd-theme
