--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = intake_odbc/_version.py
-versionfile_build = intake_odbc/_version.py
+versionfile_source = intake_sql/_version.py
+versionfile_build = intake_sql/_version.py
 tag_prefix =
