Fixes for intake #120

--- a/intake_sql/tests/cat.yaml
+++ b/intake_sql/tests/cat.yaml
@@ -9,4 +9,5 @@ sources:
         default: "env(TEST_SQLITE_URI)"
     description: "points to sqlite database"
     driver: sql_cat
+    direct_access: forbid
     metadata: {}
