--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        CONDA_ENV: [py37, py38, pip]
+        CONDA_ENV: [py37, py38, py39]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
           channels: conda-forge,defaults
           auto-activate-base: false
           activate-environment: test_env
-          environment-file: scripts/ci/environment-${{ matrix.CONDA_ENV }}.yml
+          environment-file: ci/environment-${{ matrix.CONDA_ENV }}.yml
 
       - name: pip-install
         shell: bash -l {0}
