--- a/ci/environment-py38.yml
+++ b/ci/environment-py38.yml
@@ -6,7 +6,7 @@ dependencies:
   - python=3.8
   - aiohttp
   - tornado
-  - sqlalchemy<1.4
+  - sqlalchemy
   - intake
   - requests
   - msgpack-numpy
