Use newer version of sqlalchemy on Python 3.9

--- a/ci/environment-py39.yml
+++ b/ci/environment-py39.yml
@@ -6,7 +6,7 @@ dependencies:
   - python=3.9
   - aiohttp
   - tornado
-  - sqlalchemy<1.4
+  - sqlalchemy
   - intake
   - requests
   - msgpack-numpy
