--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,17 +16,13 @@ jobs:
         CONDA_ENV: [py38, py39, py310]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2.1.1
+      - name: Setup conda
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          auto-update-conda: false
-          mamba-version: "*"
-          channels: conda-forge,defaults
-          auto-activate-base: false
-          activate-environment: test_env
           environment-file: ci/environment-${{ matrix.CONDA_ENV }}.yml
+
 
       - name: pip-install
         shell: bash -l {0}
